Update the codeowner list as proposed in the 23/01/2024 TSC.
Signed-off-by: sferna1 <santhosh.fernandes@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -8,4 +8,4 @@
 # Unless a later match takes precedence, they will be requested for
 # review when someone opens a pull request.
 # Initial list: TSC as of March 2022 + VMB 
-* @vmbrasseur @jniesz @dthaler @erictice @sanfern @dalalkaran @binojrajan
+* @jniesz @sanfern @dalalkaran
